--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/base.css?v1">
   <link rel="stylesheet" href="css/style.css?v1">
-  <link rel="icon" type="image/png" href="/img/favicon.png">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
   <div class="container">
     <div class="row" style="padding-top: 10%">
       <div class="one-half column block-header">
-        <h1 class="page-logo"><a href="/"><img src="/img/cooland_logo.jpg" alt="Cooland"></a></h1>
+        <h1 class="page-logo"><a href="/"><img src="img/cooland_logo.jpg" alt="Cooland"></a></h1>
       </div>
       <div class="one-half column block-contact">
         <table class="noborder"><tbody>
