Better links visibility

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <table class="noborder"><tbody>
           <tr><td class="label">Blog</td><td><a target="_blank" href="http://blog.cooland.cz">blog.cooland.cz</a></td></tr>
           <tr><td class="label">Facebook</td><td><a target="_blank" href="https://www.facebook.com/cestadokrajiny">https://www.facebook.com/cestadokrajiny</a></td></tr>
-          <tr><td class="label">Email</td><td>info@cooland.cz</td></tr>
+          <tr><td class="label">Email</td><td><a href="mailto:info@cooland.cz">info@cooland.cz</a></td></tr>
         </tbody><table>
       </div>
     </div>
