--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
+<div id="page">
   <div class="container">
     <div class="row" style="padding-top: 10%">
       <div class="one-half column block-header">
@@ -26,5 +27,6 @@
       </div>
     </div>
   </div>
+</div
 </body>
 </html>
