--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <tr><td class="label">Blog</td><td><a target="_blank" href="http://blog.cooland.cz">blog.cooland.cz</a></td></tr>
           <tr><td class="label">Facebook</td><td><a target="_blank" href="https://www.facebook.com/cestadokrajiny">https://www.facebook.com/cestadokrajiny</a></td></tr>
           <tr><td class="label">Email</td><td><a href="mailto:info@cooland.cz">info@cooland.cz</a></td></tr>
+          <tr><td class="label">Google+</td><td><a href="https://plus.google.com/u/0/communities/101783831094360976826">KPZ CooLAND</a></td></tr>
         </tbody><table>
       </div>
     </div>
