--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="description" content="">
   <meta name="author" content="Cooland">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/base.css?v1">
   <link rel="stylesheet" href="css/style.css?v1">
   <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
-<div id="page">
+<div id="header">
   <div class="container">
     <div class="row" style="padding-top: 10%">
       <div class="one-half column block-header">
@@ -24,10 +24,45 @@
           <tr><td class="label">Facebook</td><td><a target="_blank" href="https://www.facebook.com/cestadokrajiny">https://www.facebook.com/cestadokrajiny</a></td></tr>
           <tr><td class="label">Email</td><td><a href="mailto:info@cooland.cz">info@cooland.cz</a></td></tr>
           <tr><td class="label">Google+</td><td><a href="https://plus.google.com/u/0/communities/101783831094360976826">KPZ CooLAND</a></td></tr>
-        </tbody><table>
+        </tbody></table>
       </div>
     </div>
   </div>
-</div
+</div>
+
+
+<div id="main" class="container">
+  <p>Vizí CooLAND je pestrá venkovská krajina, která se současně stává i životním prostorem pro zodpovědné lidi, jejichž osobní hodnoty krajinu utváří. Taková venkovská krajina nepřestává pulzovat rozmanitým životem, protože v ní bydlí i další živá stvoření.</p>
+
+  <p>CooLAND je nevládní nezisková organizace složená z odborníků z oblasti krajinné ekologie, které spojuje snaha o zlepšení stavu venkovské krajiny. Chceme, aby si lidé uvědomili, jak významně svým každodenním chováním krajinu ovlivňují. Pomocí pozitivních a kreativních příkladů usilujeme o změnu přístupu k půdě. Působíme na celém území České republiky s mezinárodní spoluprací. Naším mottem je: Cesta do krajiny vede kolem vás.</p>
+
+  <p>CooLAND je průvodcem pro všechny, kteří se chtějí podílet na zlepšení stavu venkovské krajiny. Zaměřujeme se na veřejnost, neziskový sektor, vzdělávací instituce, státní správu, podnikatelské subjekty, vědu a výzkum, média, zemědělce, projektanty.</p> 
+
+  <p>CooLAND  = Průvodce zodpovědného správce krajiny</p>
+
+  <p>&nbsp;</p>
+
+  <h3>Hlavní cíle CooLAND</h3>
+
+  <h4>1) Propojení s praxí</h4>
+
+  <p>Vyhledáváme, podporujeme, a spolupracujeme s lidmi i organizacemi, které přispívají nebo chtějí aktivně přispět k ochraně venkovské krajiny a rozvoji venkova jako takového.</p>
+
+  <p>Co to konkrétně znamená? Spolupracujeme se zemědělci, kteří hospodaří s respektem k půdě a krajině. Podporujeme a pomáháme těm, kteří sami mají zájem začít hospodařit na zemědělské půdě. Šíříme myšlenku komunitou podporovaného zemědělství (KPZ) a potravinové soběstačnosti. Založili jsme vlastní KPZ CooLAND  = řešení pro nemocná pole a louky cestou chuťových zážitků pro vaše jazýčky. Upozorňujeme na to, že to co jíme, ovlivňuje významně podobu venkovské krajiny. Krajina je obrazem lidí, kteří v ní žijí. Vědomě či nevědomě svými činy ovlivňujeme její podobu každý den. Pokud se chcete dozvědět, jaký vliv mají zemědělec - státní úředník - myslivec - vlastník pozemku - mrkev či čejka na podobu krajiny, CooLAND Vám rád poradí.</p>
+
+  <h4>2) Vzdělávání a popularizace</h4>
+
+  <p>Kdo chce něco změnit, musí začít sám u sebe. Proto se vzděláváme, inspirujeme a nabyté zkušenosti předáváme dál na seminářích a akcích, které pořádáme sami nebo ve spolupráci s dalšími organizacemi i jednotlivci. Orientujeme se jak na laickou, tak i odbornou veřejnost. Hledáme nové cesty, jak lidem lépe přiblížit a vysvětlit problematiku ochrany přírody a krajiny.</p>
+
+  <p>Co to konkrétně znamená? Vyhledáváme a ukazujeme pozitivní příklady z domova i ze zahraničí. Píšeme příspěvky, které publikujeme prostřednictvím vlastního blogu, ale i dalších médií jako jsou odborné časopisy. Účastníme se diskuzí v rámci různorodých veřejných akcí. Připravujeme vlastní semináře, přednášky a setkání. Jako lektoři spolupracujeme na přípravě seminářů s dalšími organizacemi.</p> 
+
+  <h4>3) Věda a výzkum</h4>
+
+  <p>Pokud chceme šířit nové myšlenky o ochraně přírody a krajiny, je potřeba zpracovávat vědecké studie, které svými výsledky přispějí k rozšíření informací o problematice ochrany venkovské krajiny.</p>
+
+  <p>Co to konkrétně znamená? Spolupracujeme na přípravě a zpracování výzkumných projektů, jejichž cílem je nejen rozvoj místních potravinových komunit, ale i ochrana přírody a krajiny. Jsme součástí <a target="_blank" href="http://urgenci.net/csa-research-group-people">CSA Research Group</a> a evropské sítě <a target="_blank" href="http://www.accesstoland.eu/">Access to Land</a>.</p>
+  </div>
 </body>
+  
+<div id="footer"></div>
 </html>
