small test changes

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 <div id="main" class="container">
   <p>Vizí CooLAND je pestrá venkovská krajina, která se současně stává i životním prostorem pro zodpovědné lidi, jejichž osobní hodnoty krajinu utváří. Taková venkovská krajina nepřestává pulzovat rozmanitým životem, protože v ní bydlí i další živá stvoření.</p>
 
-  <p>CooLAND je nevládní nezisková organizace složená z odborníků z oblasti krajinné ekologie, které spojuje snaha o zlepšení stavu venkovské krajiny. Chceme, aby si lidé uvědomili, jak významně svým každodenním chováním krajinu ovlivňují. Pomocí pozitivních a kreativních příkladů usilujeme o změnu přístupu k půdě. Působíme na celém území České republiky s mezinárodní spoluprací. Naším mottem je: Cesta do krajiny vede kolem vás.</p>
+  <p>CooLAND je nevládní nezisková organizace složená z odborníků z oblasti krajinné ekologie, které spojuje snaha o zlepšení stavu venkovské krajiny. Chceme, aby si lidé uvědomili, jak významně svým každodenním chováním krajinu ovlivňují. Pomocí pozitivních a kreativních příkladů usilujeme o změnu přístupu k půdě. Působíme na celém území České republiky s mezinárodní spoluprací.</p>
 
   <p>CooLAND je průvodcem pro všechny, kteří se chtějí podílet na zlepšení stavu venkovské krajiny. Zaměřujeme se na veřejnost, neziskový sektor, vzdělávací instituce, státní správu, podnikatelské subjekty, vědu a výzkum, média, zemědělce, projektanty.</p> 
 
-  <p>CooLAND  = Průvodce zodpovědného správce krajiny</p>
+  <p>Naším mottem je: <strong>Cesta do krajiny vede kolem vás.</strong></p>
 
   <p>&nbsp;</p>
 
