add latin-ext to font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="Cooland">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/base.css?v1">
   <link rel="stylesheet" href="css/style.css?v1">
   <link rel="icon" type="image/png" href="img/favicon.png">
