--- a/carousel.html
+++ b/carousel.html
@@ -13,12 +13,12 @@
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
-  <link href="css/navmenu.css" rel="stylesheet" type="text/css">
   <script src="../slideshow.js"></script>
   
 </head>
 <body>
 <div id="header">
+
 <div class="container main-nav">
 	<a href="/index" class="main-nav__logo">
 		<img src="img/cooland_logo.jpg" alt="Cooland">
@@ -48,7 +48,7 @@
 <div class="carousel__wrap js-carousel-wrap">
 <ul class="carousel__container js-carousel join--4">
 <li class="carousel__item split--4 active">
-<a class="no-mobile " href="/about"><img class="full" src="img/CooLAND_all.jpg" alt="" /> </a> 
+<a class="no-mobile " href="/about"><img class="full" src="img/CooLAND_all.jpg"  alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/about"> <img class="full" src="img/CooLAND_all.jpg" alt="CooLAND_all" /> </a></li>
 <li class="carousel__item split--4 active">
 <a class="no-mobile " href="/katka"><img class="full" src="img/Katka.jpg" alt="" /> </a> 
@@ -74,6 +74,7 @@
 </div>
 
 
+</div>
 </div>
 </body>
   
