--- a/carousel.html
+++ b/carousel.html
@@ -47,26 +47,28 @@
 <div id="cooland_carusel" class="carousel">
 <div class="carousel__wrap js-carousel-wrap">
 <ul class="carousel__container js-carousel join--4">
+
 <li class="carousel__item split--4 active">
 <a class="no-mobile " href="/about"><img class="full" src="img/CooLAND_all.jpg"  alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/about"> <img class="full" src="img/CooLAND_all.jpg" alt="CooLAND_all" /> </a></li>
-<li class="carousel__item split--4 active">
+
+<li class="carousel__item split--4">
 <a class="no-mobile " href="/katka"><img class="full" src="img/Katka.jpg" alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/katka"> <img class="full" src="img/Katka.jpg" alt="Katka" /> </a></li>
 
-<li class="slide">
+<li class="carousel__item split--4">
 <a class="no-mobile " href="/vratka"><img class="full" src="img/Vratka.jpg" alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/vratka"> <img class="full" src="/Vratka.jpg" alt="Vratka" /> </a></li>
 
-<li class="slide">
+<li class="carousel__item split--4">
 <a class="no-mobile " href="/sarka"><img class="full" src="img/Sarka.jpg" alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/sarka"> <img class="full" src="img/Sarka.jpg" alt="" /> </a></li>
 
-<li class="slide">
+<li class="carousel__item split--4">
 <a class="no-mobile " href="/alena"><img class="full" src="img/Alena.jpg" alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/alena"> <img class="full" src="img/Alena.jpg" alt="Alena" /> </a></li>
 
-<li class="slide">
+<li class="carousel__item split--4">
 <a class="no-mobile " href="/radim"><img class="full" src="img/Radim.jpg" alt="" /> </a> 
 <a class="no-desktop no-tablet " href="/radim"> <img class="full" src="img/Radim.jpg" alt="Radim" /> </a></li>
 
