--- a/contact.html
+++ b/contact.html
@@ -43,16 +43,14 @@
 </div>
 <div id="main" class="container">
   
-<p>CooLAND z.s.
-Spolek zapsaný pod složkou L 64492 u Městského soudu v Praze
-IČ: 04675568</p>
+
 
 <p>Za Oborou 34
 Praha 6
 16900</p>
 
-<p>info@cooland.cz
-tel. 605 505 529</p>
+<p><a href="mailto:info@cooland.cz">info@cooland.cz</a></p>
+<p>tel. 605 505 529</p>
 
  <table class="noborder"><tbody>
           <tr><td class="label">Blog</td><td><a target="_blank" href="http://blog.cooland.cz">blog.cooland.cz</a></td></tr>
@@ -61,7 +59,9 @@ tel. 605 505 529</p>
           <tr><td class="label">Google+</td><td><a href="https://plus.google.com/u/0/communities/101783831094360976826">KPZ CooLAND</a></td></tr>
         </tbody></table>
 
-
+<p><small>CooLAND z.s.
+Spolek zapsaný pod složkou L 64492 u Městského soudu v Praze
+IČ: 04675568</small></p>
   
   
   </div>
@@ -69,4 +69,5 @@ tel. 605 505 529</p>
   
 <div id="footer"> </div>
 </html>
+
 
