--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/katka">
-    <img src="img/Katka.jpg" alt="Katka" width="200" height="">
+    <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
   </a>
   <div class="desc">Kateřina Zímová</div>
 </div>
@@ -79,7 +79,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/alena.jpg">
-    <img src="img/Alena.jpg" alt="Alena" width="200" height="">
+    <img src="img/Alca.jpg" alt="Alča" width="200" height="">
   </a>
   <div class="desc">Alena Wranová</div>
 </div>
