Update and rename vratka.htm to vratka.html

--- a/vratka.html
+++ b/vratka.html
@@ -9,10 +9,10 @@
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 
-  <link rel="icon" type="image/png" href="../img/favicon.png">
-  <link href="css/base.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/png" href="../img/favicon.png">
+<link href="css/base.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="css/navmenu.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -44,9 +44,25 @@
 <div id="main" class="container">
 
 <div class="people">
-   <h3>Vratislava Janovská</h3>
-  <h4><a href="mailto:info@cooland.cz">vratislava@cooland.cz</a>, +420 608 264 902</h4>
-  
+
+<img src="img/cooland_logo.jpg" width="370" height="" alt="Vraťka"/>
+<br>
+<br>
+<h3>Vratislava Janovská</h3>
+<br>
+
+<p> 
+<span class="left"><a href="mailto:vratislava@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
+
+<span class="right"><a href="tel:+420608264902"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
+
+<br>
+<br>
+
+<h4><span class="left"><a href="mailto:vratislava@cooland.cz">Napište mi</a></span> 
+<span class="right"><a href="tel:+420608264902">Zavolejte</a></span></h4>
+
+
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Jsem holka z malé vesnice, která dětství prožila mezi poli a v lese. Dnes jsem zabydlená na gauči v městském prostředí, neb vždy mne to táhlo ke knížkám a jako malá jsem si často hrála na učitelku. To mi zůstalo...stejně tak jako nadšení z venkovské krajiny. Společně s Katkou jsme učily na Fakultě životního prostředí předmět Pozemkové úpravy a zjistily jsme, že často studenti nemají velký zájem o venkovskou krajinu. Začaly jsme hledat důvod PROČ? Proč nejsou nadšení stejně jako my, když se začne mluvit o zemědělcích, čejkách, remízkách či alejích podél cest? Jedním z důvodu bylo, že “krajina” je pro ně abstraktní pojem nebo je unavovalo věčné fňukání nad stavem české krajiny. I my s Katkou jsme navštívily dost ubrečených seminářů a akcí, kde všichni přednášeli stylem: Všichni tady chcípnem, na všechno už je pozdě. Z toho důvodu jsme se rozhodly založit s dalšími spřízněnými dušemi spolek CooLAND. Existuje přeci tolik pozitivních příkladů, proto chceme ukazovat a šířit projekty, které se povedly a podporovat nové a nečekané nápady, protože nic není nemožné. A proč název CooLAND? Zajímat se a pečovat o krajinu je COOL, záleží jen na naší kreativitě a představivosti. LAND, protože půda je nejdůležitější společník pro naše spokojená břicha.</p>
