--- a/vratka.html
+++ b/vratka.html
@@ -45,7 +45,7 @@
 
 <div class="people">
 
-<img src="img/cooland_logo.jpg" width="370" height="" alt="Vraťka"/>
+<img src="img/vratka.jpg" width="370" height="" alt="Vraťka"/>
 <br>
 <br>
 <h3>Vratislava Janovská</h3>
