--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
-  <link href="css/gallery.css" rel="stylesheet" type="text/css">
+  <link href="gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -41,7 +41,19 @@
 </div>
 </div>
 
-<div id="main" class="container">
+<div>
+<div class="item">
+<div class="responsive">
+<div class="img">
+  <a target="_blank" href="/katka">
+    <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
+  </a>
+  
+<div class="item-overlay top"></div>
+</div>
+  <div class="desc">Náš tým</div>
+</div>
+</div>
 
 <div>
 <div class="responsive">
@@ -79,7 +91,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/alena.jpg">
-    <img src="img/Alca.jpg" alt="Alča" width="200" height="">
+    <img src="img/Alca.jpg" alt="Alena" width="200" height="">
   </a>
   <div class="desc">Alena Wranová</div>
 </div>
