--- a/gallery.html
+++ b/gallery.html
@@ -41,16 +41,14 @@
 </div>
 </div>
 
+
 <div>
-<div class="item">
-<div class="responsive">
+<div class="responsive item">
 <div class="img">
   <a target="_blank" href="/katka">
     <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
   </a>
-  
-<div class="item-overlay top"></div>
-</div>
+  <div class="item-overlay top"></div>
   <div class="desc">Náš tým</div>
 </div>
 </div>
