--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,6 @@
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
-  <link href="gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -43,12 +42,11 @@
 
 
 <div>
-<div class="responsive item">
+<div class="responsive">
 <div class="img">
   <a target="_blank" href="/katka">
     <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
   </a>
-  <div class="item-overlay top"></div>
   <div class="desc">Náš tým</div>
 </div>
 </div>
