--- a/gallery.html
+++ b/gallery.html
@@ -12,9 +12,9 @@
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link href="css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
 <div id="header">
 <div class="container main-nav">
 	<a href="/index" class="main-nav__logo">
@@ -41,17 +41,9 @@
 </div>
 </div>
 
+<div id="main" class="container">
 
 <div>
-<div class="responsive">
-<div class="img">
-  <a target="_blank" href="/katka">
-    <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
-  </a>
-  <div class="desc">Náš tým</div>
-</div>
-</div>
-
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/katka">
@@ -70,10 +62,6 @@
 </div>
 </div>
 
-</div>
- <br>
-<div>
-
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/sarka">
@@ -83,11 +71,15 @@
 </div>
 </div>
 
+ </div>
+ <br>
+ <div>
+
 
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/alena.jpg">
-    <img src="img/Alca.jpg" alt="Alena" width="200" height="">
+    <img src="img/Alca.jpg" alt="Alča" width="200" height="">
   </a>
   <div class="desc">Alena Wranová</div>
 </div>
@@ -102,6 +94,8 @@
 </div>
 </div>
 
+</div>
+
 <div class="clearfix"></div>
 
 </div>
@@ -109,4 +103,3 @@
   
 <div id="footer"></div>
 </html>
-
