--- a/homepage.html
+++ b/homepage.html
@@ -9,6 +9,7 @@
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/base.css?v2">
   <link rel="stylesheet" href="css/style.css?v2">
+  <link rel="stylesheet" href="css/responsive_ver.css?v2">
   <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
