--- a/o_nas.html
+++ b/o_nas.html
@@ -26,15 +26,15 @@
 		</a>
 		<div class="main-nav__block">
 			<div class="nav__left">
-								<a href="/about" class="						">About</a>
-								<a href="/vision" class="						">Vision</a>
-								<a href="/projects" class="						">Projects</a>				
+								<a href="/o_nas" class="	">O nás</a>
+								<a href="/vize" class="">Vize</a>
+								<a href="/projekty" class="">Projekty</a>				
 			</div>
 			
             <div class="nav__right">
-									<a href="/topics">Topics</a>
-									<a href="/partners">Partners</a>
-									<a href="/contact">Contact</a>
+									<a href="/akce" class="">Akce</a>
+									<a href="/media" class="">Média</a>
+									<a href="/partaci" class="">Parťáci</a>
 							</div>
 		</div>
 	</nav>
