--- a/vize.html
+++ b/vize.html
@@ -44,7 +44,7 @@
 <div id="main" class="container">
  
  
-<h1>CooLAND  = Průvodce zodpovědného správce krajiny</h1>
+<h2>CooLAND  = Průvodce zodpovědného správce krajiny</h2>
 
 <p>Vizí CooLAND je pestrá zemědělská  krajina, která se současně stává i životním prostorem pro zodpovědné lidi, jejichž aktivity krajinu utvářejí. Taková zemědělská krajina pulzuje rozmanitým životem a utváří příběhy lidí, rostlin a živočichů.</p>
 
@@ -54,23 +54,23 @@
 
 <p>CooLAND je průvodcem pro všechny, kteří se chtějí podílet na zlepšení stavu zemědělské krajiny. Zaměřujeme se na veřejnost, neziskový sektor, vzdělávací instituce, státní správu, podnikatelské subjekty, vědu a výzkum, média, zemědělce, projektanty.</p>
 
-<h2>Hlavní cíle CooLAND</h2>
+<h3>Hlavní cíle CooLAND</h3>
 
-<h3>1 - Propojení s praxí</h3>
+<h4><strong>1 - Propojení s praxí</strong></h4>
 
 <p>Vyhledáváme, podporujeme, a spolupracujeme s lidmi i organizacemi, které přispívají nebo chtějí aktivně přispět k ochraně zemědělské krajiny a rozvoji venkova jako takového.</p>
 
 <p>Co to konkrétně znamená?</p>
 <p>Spolupracujeme se zemědělci, kteří hospodaří s úctou k půdě a krajině. Podporujeme a pomáháme těm, kteří sami mají zájem začít hospodařit na zemědělské půdě. Šíříme myšlenku komunitou podporovaného zemědělství (KPZ) a potravinové soběstačnosti. Založili jsme vlastní <a href="https://plus.google.com/u/0/communities/101783831094360976826" target="_blank">KPZ CooLAND</a>  = řešení pro nemocná pole a louky cestou chuťových zážitků pro vaše jazýčky. Upozorňujeme na to, že to co jíme, ovlivňuje významně podobu zemědělské krajiny. Krajina je obrazem lidí, kteří v ní žijí. Vědomě či nevědomě svými činy ovlivňujeme její podobu každý den. Pokud se chcete dozvědět, jaký vliv mají zemědělec - státní úředník - myslivec - vlastník pozemku - mrkev či čejka na podobu krajiny, CooLAND Vám rád poradí.</p>
 
-<h3>2 - Vzdělávání a popularizace</h3>
+<h4><strong>2 - Vzdělávání a popularizace</strong></h4>
 
 <p>Kdo chce něco změnit, musí začít sám u sebe. Proto se vzděláváme, <a href="https://www.facebook.com/cestadokrajiny" target="_blank">inspirujeme</a> a nabyté zkušenosti předáváme dál na seminářích a akcích, které pořádáme sami nebo ve spolupráci s <a href="/partaci">dalšími organizacemi</a> i jednotlivci. Orientujeme se jak na laickou, tak i odbornou veřejnost. Hledáme nové cesty, jak lidem lépe přiblížit a vysvětlit problematiku ochrany přírody a krajiny.</p>
 
 <p>Co to konkrétně znamená?</p> 
 <p>Vyhledáváme a ukazujeme pozitivní příklady z domova i ze zahraničí. Píšeme příspěvky, které publikujeme prostřednictvím <a href="http://blog.cooland.cz/" target="_blank">vlastního blogu</a>, ale i dalších médií jako jsou odborné časopisy. Účastníme se diskuzí v rámci různorodých veřejných akcí. Připravujeme vlastní semináře, přednášky a setkání. Jako lektoři spolupracujeme na přípravě seminářů <a href="/partaci">s dalšími organizacemi.</a></p>
 
-<h3>3 - Věda a výzkum</h3>
+<h4><strong>3 - Věda a výzkum</strong></h4>
 
 <p>Pokud chceme šířit nové myšlenky o ochraně přírody a krajiny, je potřeba sledovat nejen nejnovější poznatky u nás i v zahraničí, ale i zpracovávat vlastní vědecké studie, které svými výsledky přispějí k rozšíření informací o problematice ochrany zemědělské krajiny.</p> 
 
@@ -83,3 +83,5 @@
   
 <div id="footer"></div>
 </html>
+
+
