--- a/o_nas.html
+++ b/o_nas.html
@@ -49,7 +49,10 @@
   <a target="_blank" href="/katka">
     <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
   </a>
-  <div class="desc">Kateřina Zímová</div>
+  <div class="desc">
+  <p>Kateřina Zímová</p>
+  <p>katerina@cooland.cz</p>
+  <p>+420 605 505 529</p></div>
 </div>
 </div>
 
