--- a/o_nas.html
+++ b/o_nas.html
@@ -50,8 +50,8 @@
     <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
   </a>
   <div class="desc">
-  <p>Kateřina Zímová</p>
-  <p>katerina@cooland.cz</p>
+  <h3>Kateřina Zímová</h3>
+  <p><a href="katerina@cooland.cz">katerina@cooland.cz</a></p>
   <p>+420 605 505 529</p></div>
 </div>
 </div>
