--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div id="main" class="container">
   <div class="responsive_ver">
-  <img src="img/KPZCooLAND_vernisage_small.png"  width="960" height="" alt="vernisage">
+  <img src="img/KPZCooLAND_vernisage.jpg"  width="960" height="" alt="vernisage">
   </div>
   <div class="clearfix"></div>
   </div>
