--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,6 @@
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/base.css?v2">
   <link rel="stylesheet" href="css/style.css?v2">
-  <link rel="stylesheet" href="css/responsive_ver.css?v2">
   <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
@@ -33,10 +32,8 @@
 
 
 <div id="main" class="container">
-  <div class="responsive_ver">
-  <img src="img/KPZCooLAND_vernisage.png"  width="960" height="" alt="vernisage">
-  </div>
-  <div class="clearfix"></div>
+  <img src="img/KPZCooLAND_vernisage.jpg"  width="960" height="" alt="vernisage">
+
   </div>
 </body>
   
