--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
   <meta charset="utf-8">
   <title>Cooland</title>
@@ -7,34 +7,66 @@
   <meta name="author" content="Cooland">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/base.css?v2">
-  <link rel="stylesheet" href="css/style.css?v2">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+
+  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link href="css/base.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link href="css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
-  <div class="container">
-    <div class="row" style="padding-top: 10%">
-      <div class="one-half column block-header">
-        <h1 class="page-logo"><a href="/"><img src="img/cooland_logo.jpg" alt="Cooland"></a></h1>
-      </div>
-      <div class="one-half column block-contact">
-        <table class="noborder"><tbody>
+<div class="container">
+<div class="main-nav">
+	<a href="/index" class="main-nav__logo">
+		<img src="img/cooland_logo.jpg" alt="Cooland">
+	</a>
+	<nav class="fl">
+		<a href="" class="main-nav__burger js-nav">
+			 <i class="icon-reorder"></i>
+		</a>
+		<div class="main-nav__block">
+			<div class="nav__left">
+								<a href="/o_nas" class="	">O nás</a>
+								<a href="/vize" class="">Vize</a>
+								<a href="/projekty" class="">Projekty</a>				
+			</div>
+			
+            <div class="nav__right">
+									<a href="/akce" class="">Akce</a>
+									<a href="/media" class="">Média</a>
+									<a href="/partaci" class="">Parťáci</a>
+							</div>
+		</div>
+	</nav>
+</div>
+</div>
+
+
+<div id="main">
+  <img src="img/KPZCooLAND_vernisage.jpg"  width="960" height="" alt="vernisage">
+
+  </div>
+  <div>
+  <p>Za Oborou 34
+Praha 6
+16900</p>
+
+<p><a href="mailto:info@cooland.cz">info@cooland.cz</a></p>
+<p>tel. 605 505 529</p>
+
+ <table class="noborder"><tbody>
           <tr><td class="label">Blog</td><td><a target="_blank" href="http://blog.cooland.cz">blog.cooland.cz</a></td></tr>
           <tr><td class="label">Facebook</td><td><a target="_blank" href="https://www.facebook.com/cestadokrajiny">https://www.facebook.com/cestadokrajiny</a></td></tr>
           <tr><td class="label">Email</td><td><a href="mailto:info@cooland.cz">info@cooland.cz</a></td></tr>
           <tr><td class="label">Google+</td><td><a href="https://plus.google.com/u/0/communities/101783831094360976826">KPZ CooLAND</a></td></tr>
         </tbody></table>
-      </div>
-    </div>
-  </div>
+
+<p><small>CooLAND z.s.
+Spolek zapsaný pod složkou L 64492 u Městského soudu v Praze
+IČ: 04675568</small></p>
 </div>
-
-
-<div id="main" class="container">
-  <img src="img/KPZCooLAND_vernisage.jpg"  width="960" height="" alt="vernisage">
-
-  </div>
+</div>
 </body>
   
 <div id="footer"></div>
