--- a/homepage.html
+++ b/homepage.html
@@ -16,8 +16,7 @@
 </head>
 <body>
 <div id="header">
-<div class="container">
-<div class="main-nav">
+<div class="container main-nav">
 	<a href="/index" class="main-nav__logo">
 		<img src="img/cooland_logo.jpg" alt="Cooland">
 	</a>
@@ -43,11 +42,11 @@
 </div>
 
 
-<div id="main">
+<div id="main" class="container">
   <img src="img/KPZCooLAND_vernisage.jpg"  width="960" height="" alt="vernisage">
 
   </div>
-  <div>
+<div class="container">
   <p>Za Oborou 34
 Praha 6
 16900</p>
@@ -65,7 +64,6 @@ Praha 6
 <p><small>CooLAND z.s.
 Spolek zapsaný pod složkou L 64492 u Městského soudu v Praze
 IČ: 04675568</small></p>
-</div>
 </div>
 </body>
   
