--- a/homepage.html
+++ b/homepage.html
@@ -43,7 +43,7 @@
 
 
 <div id="main" class="container">
-  <img src="img/KPZCooLAND_vernisage.jpg"  width="inherit" height="" alt="vernisage">
+  <img class="vernisaz" src="img/KPZCooLAND_vernisage.jpg"  width="" height="" alt="vernisaz">
 
   </div>
   <br>
