--- a/o_nas.html
+++ b/o_nas.html
@@ -61,7 +61,10 @@
   <a target="_blank" href="/vratka">
     <img src="img/Vratka.jpg" alt="Vraťka" width="200" height="">
   </a>
-  <div class="desc">Vratislava Janovská</div>
+  <div class="desc">
+ <h3>Vratislava Janovská</h3>
+  <p><a href="vratislava@cooland.cz">vratislava@cooland.cz</a></p>
+  <p>+420 608 264 902</p></div>
 </div>
 </div>
 
@@ -101,6 +104,32 @@
 
 <div class="clearfix"></div>
 
+</div>
+
+<br>
+<br>
+<div class="container">     
+<div class="one-half column block-contact">
+        <table class="noborder"><tbody>
+ 	  <tr><td class="label">Adresa</td><td>Za Oborou 34, Praha 6  16900</td></tr>
+          <tr><td class="label">Email</td><td><a href="mailto:info@cooland.cz">info@cooland.cz</a></td></tr>
+          <tr><td class="label">Mobil</td><td>+420 605 505 529</td></tr>
+        </tbody></table>
+      </div>
+      <div class="one-half column block-contact">
+        <table class="noborder"><tbody>
+          <tr><td class="label">Facebook</td><td><a target="_blank" href="https://www.facebook.com/cestadokrajiny">https://www.facebook.com/cestadokrajiny</a></td></tr>
+          <tr><td class="label">Blog</td><td><a target="_blank" href="http://blog.cooland.cz">blog.cooland.cz</a></td></tr>
+          <tr><td class="label">Google+</td><td><a href="https://plus.google.com/u/0/communities/101783831094360976826">KPZ CooLAND</a></td></tr>
+        </tbody></table>
+      </div>        
+<p>&nbsp;</p>
+  
+<div>
+<p><small>CooLAND z.s.
+Spolek zapsaný pod složkou L 64492 u Městského soudu v Praze
+IČ: 04675568</small></p>
+</div>
 </div>
 </body>
   
