--- a/o_nas.html
+++ b/o_nas.html
@@ -73,7 +73,11 @@
   <a target="_blank" href="/sarka">
     <img src="img/Sarka.jpg" alt="Šárka" width="200" height="">
   </a>
-  <div class="desc">Šárka Krčílková</div>
+  <div class="desc">
+  <h3>Šárka Krčílková</h3>
+  <p><a href="mailto:sarka@cooland.cz">sarka@cooland.cz</a></p>
+  <p>+420 725 290 604</p></div>
+  
 </div>
 </div>
 
@@ -87,7 +91,10 @@
   <a target="_blank" href="/alena.jpg">
     <img src="img/Alca.jpg" alt="Alča" width="200" height="">
   </a>
-  <div class="desc">Alena Wranová</div>
+  <div class="desc">
+  <h3>Alena Wranová</h3>
+  <p><a href="mailto:alena@cooland.cz">alena@cooland.cz</a></p>
+  <p>+420 777 671 806</p></div>
 </div>
 </div>
 
@@ -96,7 +103,11 @@
   <a target="_blank" href="/radim.jpg">
     <img src="img/Radim.jpg" alt="Radim" width="200" height="">
   </a>
-  <div class="desc">Radim Seydl</div>
+  <div class="desc">
+  <h3>Radim Seydl</h3>
+  <p><a href="mailto:radim@cooland.cz">radim@cooland.cz</a></p>
+  <p>+420 606 099 005</p></div>
+  
 </div>
 </div>
 
