--- a/o_nas.html
+++ b/o_nas.html
@@ -47,10 +47,10 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/katka">
-    <img src="img/CooLAND_all.jpg" alt="Katka" width="200" height="">
+    <img src="img/Katka.jpg" alt="Katka" width="200" height="">
   </a>
   <div class="desc">
-  <h3>Kateřina Zímová</h3>
+  <h4>Kateřina Zímová</h4>
   <p><a href="katerina@cooland.cz">katerina@cooland.cz</a></p>
   <p>+420 605 505 529</p></div>
 </div>
