--- a/o_nas.html
+++ b/o_nas.html
@@ -47,7 +47,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/katka">
-    <img src="img/Katka.jpg" alt="Katka" width="200" height="">
+    <img src="img/Katka_small.jpg" alt="Katka" width="200" height="">
   </a>
   <div class="desc">
   <h4>Kateřina Zímová</h4>
@@ -59,10 +59,10 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/vratka">
-    <img src="img/Vratka.jpg" alt="Vraťka" width="200" height="">
+    <img src="img/Vratka_small.jpg" alt="Vraťka" width="200" height="">
   </a>
   <div class="desc">
- <h3>Vratislava Janovská</h3>
+ <h4>Vratislava Janovská</h4>
   <p><a href="vratislava@cooland.cz">vratislava@cooland.cz</a></p>
   <p>+420 608 264 902</p></div>
 </div>
@@ -71,10 +71,10 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/sarka">
-    <img src="img/Sarka.jpg" alt="Šárka" width="200" height="">
+    <img src="img/Sarka_small.jpg" alt="Šárka" width="200" height="">
   </a>
   <div class="desc">
-  <h3>Šárka Krčílková</h3>
+  <h4>Šárka Krčílková</h4>
   <p><a href="mailto:sarka@cooland.cz">sarka@cooland.cz</a></p>
   <p>+420 725 290 604</p></div>
   
@@ -89,10 +89,10 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/alena.jpg">
-    <img src="img/Alca.jpg" alt="Alča" width="200" height="">
+    <img src="img/Alca_small.jpg" alt="Alča" width="200" height="">
   </a>
   <div class="desc">
-  <h3>Alena Wranová</h3>
+  <h4>Alena Wranová</h4>
   <p><a href="mailto:alena@cooland.cz">alena@cooland.cz</a></p>
   <p>+420 777 671 806</p></div>
 </div>
@@ -101,10 +101,10 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/radim.jpg">
-    <img src="img/Radim.jpg" alt="Radim" width="200" height="">
+    <img src="img/Radim_small.jpg" alt="Radim" width="200" height="">
   </a>
   <div class="desc">
-  <h3>Radim Seydl</h3>
+  <h4>Radim Seydl</h4>
   <p><a href="mailto:radim@cooland.cz">radim@cooland.cz</a></p>
   <p>+420 606 099 005</p></div>
   
