--- a/o_nas.html
+++ b/o_nas.html
@@ -52,7 +52,8 @@
   <div class="desc">
   <h4>Kateřina Zímová</h4>
   <p><a href="katerina@cooland.cz">katerina@cooland.cz</a></p>
-  <p>+420 605 505 529</p></div>
+  <p>+420 605 505 529</p>
+  <p><a target="_blank" href="/katka">Moje cesta do CooLAND zde</a></p></div>
 </div>
 </div>
 
@@ -64,7 +65,8 @@
   <div class="desc">
  <h4>Vratislava Janovská</h4>
   <p><a href="vratislava@cooland.cz">vratislava@cooland.cz</a></p>
-  <p>+420 608 264 902</p></div>
+  <p>+420 608 264 902</p>
+  <p><a target="_blank" href="/vratka">Moje cesta do CooLAND zde</a></p></div>
 </div>
 </div>
 
@@ -76,7 +78,8 @@
   <div class="desc">
   <h4>Šárka Krčílková</h4>
   <p><a href="mailto:sarka@cooland.cz">sarka@cooland.cz</a></p>
-  <p>+420 725 290 604</p></div>
+  <p>+420 725 290 604</p>
+  <p><a target="_blank" href="/sarka">Moje cesta do CooLAND zde</a></p></div>
   
 </div>
 </div>
@@ -94,7 +97,8 @@
   <div class="desc">
   <h4>Alena Wranová</h4>
   <p><a href="mailto:alena@cooland.cz">alena@cooland.cz</a></p>
-  <p>+420 777 671 806</p></div>
+  <p>+420 777 671 806</p>
+  <p><a target="_blank" href="/alena">Moje cesta do CooLAND zde</a></p></div>
 </div>
 </div>
 
@@ -106,7 +110,8 @@
   <div class="desc">
   <h4>Radim Seydl</h4>
   <p><a href="mailto:radim@cooland.cz">radim@cooland.cz</a></p>
-  <p>+420 606 099 005</p></div>
+  <p>+420 606 099 005</p>
+  <p><a target="_blank" href="/radim">Moje cesta do CooLAND zde</a></p></div>
   
 </div>
 </div>
