--- a/o_nas.html
+++ b/o_nas.html
@@ -47,7 +47,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/katka">
-    <img src="img/Katka_small.jpg" alt="Katka" width="200" height="">
+    <img src="img/Katka.jpg" alt="Katka" width="" height="">
   </a>
   <div class="desc">
   <h4>Kateřina Zímová</h4>
@@ -60,7 +60,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/vratka">
-    <img src="img/Vratka_small.jpg" alt="Vraťka" width="200" height="">
+    <img src="img/Vratka.jpg" alt="Vraťka" width="" height="">
   </a>
   <div class="desc">
  <h4>Vratislava Janovská</h4>
@@ -73,7 +73,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/sarka">
-    <img src="img/Sarka_small.jpg" alt="Šárka" width="200" height="">
+    <img src="img/Sarka" alt="Šárka" width="" height="">
   </a>
   <div class="desc">
   <h4>Šárka Krčílková</h4>
@@ -92,7 +92,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/alena.jpg">
-    <img src="img/Alca_small.jpg" alt="Alča" width="200" height="">
+    <img src="img/Alca.jpg" alt="Alča" width="" height="">
   </a>
   <div class="desc">
   <h4>Alena Wranová</h4>
@@ -105,7 +105,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/radim.jpg">
-    <img src="img/Radim_small.jpg" alt="Radim" width="200" height="">
+    <img src="img/Radim.jpg" alt="Radim" width="" height="">
   </a>
   <div class="desc">
   <h4>Radim Seydl</h4>
