--- a/o_nas.html
+++ b/o_nas.html
@@ -73,7 +73,7 @@
 <div class="responsive">
 <div class="img">
   <a target="_blank" href="/sarka">
-    <img src="img/Sarka" alt="Šárka" width="" height="">
+    <img src="img/Sarka.jpg" alt="Šárka" width="" height="">
   </a>
   <div class="desc">
   <h4>Šárka Krčílková</h4>
