--- a/akce.html
+++ b/akce.html
@@ -74,12 +74,12 @@
 
 <p>Přednášíme o problémech, které s sebou nese současná produkce potravin ve vztahu k zemědělské půdě. A nabízíme také řešení - pozemkové úpravy, nebo podpora šetrně hospodařících zemědělců třeba zapojením se do KPZ. </p>
 
-<p>http://www.motivp.com/…/video/Plytvani-jidlem-Dil-1-Produkce</p>
+<p><a href="http://www.motivp.com/…/video/Plytvani-jidlem-Dil-1-Produkce" target="_blank">http://www.motivp.com/…/video/Plytvani-jidlem-Dil-1-Produkce</a></p>
 
 <h4>6. listopadu 2015 / Olomouc, “První setkání komunitou podporovaného zemědělství v ČR”</h4>
 
 <p>Na prvním setkání českých KPZek samozřejmě nesmíme chybět.</p>
-<p>http://www.kpzinfo.cz/news/prvni-setkani-komunitou-podporovaneho-zemedelstvi-v-cr1/</p>
+<p><a href="http://www.kpzinfo.cz/news/prvni-setkani-komunitou-podporovaneho-zemedelstvi-v-cr1/" target="_blank">http://www.kpzinfo.cz/news/prvni-setkani-komunitou-podporovaneho-zemedelstvi-v-cr1/</a></p>
 
 <h4>17. - 18. října 2015 / Národní technická knihovna v Praze, “Street Food Festival”</h4>
 
@@ -89,7 +89,7 @@
 
 <p>Tradičně se podílíme na organizace mezinárodní soutěžní filmové přehlídky filmů přibližujících vědecká témata.</p>
 
-<p>www.lsff.cz</p>
+<p><a href="http://www.lsff.cz" target="_blank">www.lsff.cz</a></p>
 
 <h4>12. října 2015 / Fakulta životního prostředí ČZU v Praze</h4>
 <h4>Výstava “Láska ke krajině prochází žaludkem”</h4>
@@ -107,11 +107,6 @@ Propagaci komunitou podporovaného zemědělství a ochrany zemědělské krajin
 
 <h4>14. dubna 2015 / Havran Café, “Zakládáme KPZ CooLAND”</h4>
 <p>Na zakládací schůzce KPZ CooLAND podepsalo Dohodu se zemědělcem a Kodex členů KPZ CooLAND 32 lidí. To jsme opravdu nečekali :-).</p>
-
-
-
-
-
 
 </div>
 </body>
