--- a/akce.html
+++ b/akce.html
@@ -91,8 +91,7 @@
 
 <p><a href="http://www.lsff.cz" target="_blank">www.lsff.cz</a></p>
 
-<h4>12. října 2015 / Fakulta životního prostředí ČZU v Praze</h4>
-<h4>Výstava “Láska ke krajině prochází žaludkem”</h4>
+<h4>12. října 2015 / Fakulta životního prostředí ČZU v Praze Výstava “Láska ke krajině prochází žaludkem”</h4>
 <p>Life Sciences Film Festival otevíráme vernisáží výstavy fotografií o příběhu první sezóny komunitou podporovaného zemědělství KPZ CooLAND. Není to jen o zelenině! Je to hlavně o pochopení principů ekologického zemědělství, radosti z dobrého jídla, o pražácích pracujících na poli, podpoře harmonické krajiny, přátelství a bujarých večírcích. To vše je KPZ CooLAND!</p>
 
 <h4>24. - 25. září 2015 / Studio Alta, “Fórum potravinové suverenity”</h4>
