--- a/media.html
+++ b/media.html
@@ -52,19 +52,19 @@
 
 <h4>1. října 2014 / Učíme se filmem</h4>
 <p>O projektu propojení filmů a vzdělávání, kde se CooLAND zabýval tématem Prostupnost krajiny:</p>
-<p><a href="https://www.youtube.com/watch?v=ciGMk4b7wKU" target="_blank">https://www.youtube.com/watch?v=ciGMk4b7wKU</a></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ciGMk4b7wKU" frameborder="0" allowfullscreen></iframe>
 
 <br>
-
+<br>
 <div class="responsive">
 <div class="img">
-    <img src="img/CooLAND_all.jpg" alt="Cooland" width="300" height="">
+    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="">
 </div>
 </div>
 
 <div class="responsive">
 <div class="img">
-    <img src="img/CooLand_logo.png" alt="Radim" width="300" height="">
+    <img src="img/CooLand_logo.png" alt="Radim" width="" height="">
 </div>
 </div>
 
