--- a/media.html
+++ b/media.html
@@ -49,22 +49,23 @@
 <h4>27. května 2016 / Občanské noviny</h4>
 <p>Reportáž o nás a o tom, co děláme:</p> 
 <p><a href="http://www.ceskatelevize.cz/porady/10800462866-obcanske-noviny/216562248430018/" target="_blank">http://www.ceskatelevize.cz/porady/10800462866-obcanske-noviny/216562248430018/</a></p>
+<iframe width="560" height="315" src="http://www.ceskatelevize.cz/porady/10800462866-obcanske-noviny/216562248430018/" frameborder="0" allowfullscreen></iframe>
 
 <h4>1. října 2014 / Učíme se filmem</h4>
 <p>O projektu propojení filmů a vzdělávání, kde se CooLAND zabýval tématem Prostupnost krajiny:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ciGMk4b7wKU" frameborder="0" allowfullscreen></iframe>
 
-<br>
-<br>
+&nbsp;
+&nbsp;
 <div class="responsive">
 <div class="img">
-    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="">
+    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="300">
 </div>
 </div>
 
 <div class="responsive">
 <div class="img">
-    <img src="img/CooLand_logo.png" alt="Radim" width="" height="">
+    <img src="img/CooLand_logo.png" alt="Radim" width="" height="300">
 </div>
 </div>
 
