--- a/media.html
+++ b/media.html
@@ -49,7 +49,6 @@
 <h4>27. května 2016 / Občanské noviny</h4>
 <p>Reportáž o nás a o tom, co děláme:</p> 
 <p><a href="http://www.ceskatelevize.cz/porady/10800462866-obcanske-noviny/216562248430018/" target="_blank">http://www.ceskatelevize.cz/porady/10800462866-obcanske-noviny/216562248430018/</a></p>
-<iframe width="560" height="315" src="http://www.ceskatelevize.cz/porady/10800462866-obcanske-noviny/216562248430018/" frameborder="0" allowfullscreen></iframe>
 
 <h4>1. října 2014 / Učíme se filmem</h4>
 <p>O projektu propojení filmů a vzdělávání, kde se CooLAND zabýval tématem Prostupnost krajiny:</p>
@@ -59,17 +58,31 @@
 &nbsp;
 <div class="responsive">
 <div class="img">
-    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="300">
+    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="">
 </div>
 </div>
 
 <div class="responsive">
 <div class="img">
-    <img src="img/CooLand_logo.png" alt="Radim" width="" height="300">
+    <img src="img/CooLand_logo.png" alt="Radim" width="" height="">
 </div>
 </div>
 
 <div class="clearfix"></div>
+
+<div class="container">
+    <div class="row" style="padding-top: 10%">
+      <div class="one-half column block-header">
+        <h1 class="page-logo"><a href="/"><img src="img/CooLAND_all.jpg" alt="Cooland"></a></h1>
+      </div>
+      <div class="one-half column block-contact">
+        <div class="one-half column block-header">
+        <h1 class="page-logo"><a href="/"><img src="img/CooLand_logo.png" alt="Cooland"></a></h1>
+      </div>
+      </div>
+    </div>
+  </div>
+
 
 </div>
 </body>
