--- a/media.html
+++ b/media.html
@@ -54,30 +54,19 @@
 <p>O projektu propojení filmů a vzdělávání, kde se CooLAND zabýval tématem Prostupnost krajiny:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ciGMk4b7wKU" frameborder="0" allowfullscreen></iframe>
 
-&nbsp;
-&nbsp;
-<div class="responsive">
-<div class="img">
-    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="">
-</div>
-</div>
-
-<div class="responsive">
-<div class="img">
-    <img src="img/CooLand_logo.png" alt="Radim" width="" height="">
-</div>
-</div>
-
-<div class="clearfix"></div>
+<br>
+<br>
+<br>
+<br>
 
 <div class="container">
     <div class="row" style="padding-top: 10%">
       <div class="one-half column block-header">
-        <h1 class="page-logo"><a href="/"><img src="img/CooLAND_all.jpg" alt="Cooland"></a></h1>
+        <p class="page-logo"><img src="img/CooLAND_all.jpg" alt="Cooland"></p>
       </div>
       <div class="one-half column block-contact">
         <div class="one-half column block-header">
-        <h1 class="page-logo"><a href="/"><img src="img/CooLand_logo.png" alt="Cooland"></a></h1>
+        <p class="page-logo"><img src="img/CooLand_logo.png" alt="Cooland"></p>
       </div>
       </div>
     </div>
